--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.3"
+  },
+  "engines": {
+    "npm": "6.10.3",
+    "node": "11.14.0"
   }
 }
